fix: contrast for accessibility

--- a/src/components/Awards/Awards.scss
+++ b/src/components/Awards/Awards.scss
@@ -32,7 +32,7 @@
       min-width: 48px;
       min-height: 48px;
       margin-right: 24px;
-      font-size: 1.125rem;
+      font-size: 1.5rem;
       background-color: shared.$flash-color;
       color: white;
       @media all and (max-width: 600px) {
