--- a/src/components/ContactForm/ContactForm.scss
+++ b/src/components/ContactForm/ContactForm.scss
@@ -13,9 +13,9 @@
   & label {
     margin-bottom: 4px;
     font-weight: bold;
-    & span {
-      color: shared.$flash-color;
-    }
+    // & span {
+    //   color: shared.$flash-color;
+    // }
   }
   & input,
   textarea {
